--- a/services/page-builder/src/styles/ds.module.css
+++ b/services/page-builder/src/styles/ds.module.css
@@ -1,2 +1,3 @@
 @import "@ooz/themes/themes.css";
 @import "@ooz/react-components-layout/style.css";
+@import "@ooz/react-components-accordion/style.css";
